cbits/Bullet.h

float btRaycastVehicle_getCurrentSpeedKmHour(void *c); //method: getCurrentSpeedKmHour ::btScalar ( ::btRaycastVehicle::* )(  ) const
void btRaycastVehicle_setBrake(void *c,float p0,int p1); //method: setBrake void ( ::btRaycastVehicle::* )( ::btScalar,int ) 
void btRaycastVehicle_setSteeringValue(void *c,float p0,int p1); //method: setSteeringValue void ( ::btRaycastVehicle::* )( ::btScalar,int ) 
void btRaycastVehicle_updateVehicle(void *c,float p0); //method: updateVehicle void ( ::btRaycastVehicle::* )( ::btScalar ) 
void btRaycastVehicle_updateAction(void *c,void* p0,float p1); //method: updateAction void ( ::btRaycastVehicle::* )( ::btCollisionWorld *,::btScalar ) 
void btRaycastVehicle_m_forwardWS_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btVector3> btRaycastVehicle->m_forwardWS
void* btRaycastVehicle_m_forwardWS_get(void *c); //attribute: ::btAlignedObjectArray<btVector3> btRaycastVehicle->m_forwardWS
void btRaycastVehicle_m_axle_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btVector3> btRaycastVehicle->m_axle
void* btRaycastVehicle_m_axle_get(void *c); //attribute: ::btAlignedObjectArray<btVector3> btRaycastVehicle->m_axle
void btRaycastVehicle_m_forwardImpulse_set(void *c,void* a); //attribute: ::btAlignedObjectArray<float> btRaycastVehicle->m_forwardImpulse
void* btRaycastVehicle_m_forwardImpulse_get(void *c); //attribute: ::btAlignedObjectArray<float> btRaycastVehicle->m_forwardImpulse
void btRaycastVehicle_m_sideImpulse_set(void *c,void* a); //attribute: ::btAlignedObjectArray<float> btRaycastVehicle->m_sideImpulse
void* btRaycastVehicle_m_sideImpulse_get(void *c); //attribute: ::btAlignedObjectArray<float> btRaycastVehicle->m_sideImpulse
void btRaycastVehicle_m_userConstraintType_set(void *c,int a); //attribute: int btRaycastVehicle->m_userConstraintType
int btRaycastVehicle_m_userConstraintType_get(void *c); //attribute: int btRaycastVehicle->m_userConstraintType
void btRaycastVehicle_m_userConstraintId_set(void *c,int a); //attribute: int btRaycastVehicle->m_userConstraintId
int btRaycastVehicle_m_userConstraintId_get(void *c); //attribute: int btRaycastVehicle->m_userConstraintId
void btRaycastVehicle_m_tau_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle->m_tau
float btRaycastVehicle_m_tau_get(void *c); //attribute: ::btScalar btRaycastVehicle->m_tau
void btRaycastVehicle_m_damping_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle->m_damping
float btRaycastVehicle_m_damping_get(void *c); //attribute: ::btScalar btRaycastVehicle->m_damping
void btRaycastVehicle_m_vehicleRaycaster_set(void *c,void* a); //attribute: ::btVehicleRaycaster * btRaycastVehicle->m_vehicleRaycaster
void* btRaycastVehicle_m_vehicleRaycaster_get(void *c); //attribute: ::btVehicleRaycaster * btRaycastVehicle->m_vehicleRaycaster
void btRaycastVehicle_m_pitchControl_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle->m_pitchControl
float btRaycastVehicle_m_pitchControl_get(void *c); //attribute: ::btScalar btRaycastVehicle->m_pitchControl
void btRaycastVehicle_m_steeringValue_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle->m_steeringValue
float btRaycastVehicle_m_steeringValue_get(void *c); //attribute: ::btScalar btRaycastVehicle->m_steeringValue
void btRaycastVehicle_m_currentVehicleSpeedKmHour_set(void *c,float a); //attribute: ::btScalar btRaycastVehicle->m_currentVehicleSpeedKmHour
float btRaycastVehicle_m_currentVehicleSpeedKmHour_get(void *c); //attribute: ::btScalar btRaycastVehicle->m_currentVehicleSpeedKmHour
void btRaycastVehicle_m_chassisBody_set(void *c,void* a); //attribute: ::btRigidBody * btRaycastVehicle->m_chassisBody
void* btRaycastVehicle_m_chassisBody_get(void *c); //attribute: ::btRigidBody * btRaycastVehicle->m_chassisBody
void btRaycastVehicle_m_indexRightAxis_set(void *c,int a); //attribute: int btRaycastVehicle->m_indexRightAxis